# simple-things-manager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
database/: starter_template.sql  test_data.sql  things_list.db
docs/: .$flowchart.drawio.bkp  flowchart.drawio  log.txt
include/: appReset.h  bcrypt.h  dataManager.h  utils.h
src/: appReset.cpp  bcrypt.cpp  dataManager.cpp  main.cpp  utils.cpp
